ALB.yaml
Parameters:
  LoadBalancerVPCId:
    Description: VPC containing the Load Balancer
    Type: AWS::EC2::VPC::Id

  HSWCertificateARN:
    Description: The Amazon Resource Name (ARN) of the certificate to use with Hyperspace Web
    Type: String

  ICFGCertificateARN:
    Description: The Amazon Resource Name (ARN) of the certificate to use with Haiku/Canto
    Type: String    

#### These Mappings are for reference - you need to stick the appropriate number in the Bucket policy principal "AWS": "arn:aws:iam::elb-account-id:root" ####
#### https://docs.aws.amazon.com/elasticloadbalancing/latest/application/enable-access-logging.html ####

#Mappings:
#    RegionMap: 
#      us-east-1:
#        ELBAcct: 127311923021
#      us-east-2:
#        ELBAcct: 033677994240
#      us-west-1:
#        ELBAcct: 027434742980
#      us-west-2:
#        ELBAcct: 797873946194

Resources:
  #https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub 'ALBSG-${AWS::StackName}'
      GroupDescription: Security Group for Hyperspace Web and Interconnect Application Load Balancers
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all traffic to all destination
          IpProtocol: "-1"      
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: HTTPS
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          Description: HTTP
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80          
      VpcId: !Ref LoadBalancerVPCId

#https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html
  HSWTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-HSWTargetGroup"
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: 443
      HealthCheckProtocol: HTTPS
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Port: 443
      Protocol: HTTPS
      ProtocolVersion: HTTP1
      TargetType: ip
      Targets: 
        - Id: !ImportValue EpicRO-HSW1IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-HSW2IPAddress
          AvailabilityZone: all  
        - Id: !ImportValue EpicRO-HSW3IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-HSW4IPAddress
          AvailabilityZone: all 
        - Id: !ImportValue EpicRO-HSW5IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-HSW6IPAddress
          AvailabilityZone: all
        - Id: !ImportValue EpicRO-HSW7IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-HSW8IPAddress
          AvailabilityZone: all 
        - Id: !ImportValue EpicRO-HSW9IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-HSW10IPAddress
          AvailabilityZone: all 
        - Id: !ImportValue EpicRO-HSW11IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-HSW12IPAddress
          AvailabilityZone: all 
        - Id: !ImportValue EpicRO-HSW13IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-HSW14IPAddress
          AvailabilityZone: all                                                                    
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 3600
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 86400
      VpcId: !Ref LoadBalancerVPCId                 

  ICFGTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-ICTargetGroup"
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: 443
      HealthCheckProtocol: HTTPS
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Port: 443
      Protocol: HTTPS
      ProtocolVersion: HTTP1
      TargetType: ip
      Targets: 
        - Id: !ImportValue EpicRO-IC1IPAddress
          AvailabilityZone: all
        - Id: !ImportValue EpicRO-IC2IPAddress
          AvailabilityZone: all        
        - Id: !ImportValue EpicRO-IC3IPAddress
          AvailabilityZone: all
        - Id: !ImportValue EpicRO-IC4IPAddress
          AvailabilityZone: all   
        - Id: !ImportValue EpicRO-IC5IPAddress
          AvailabilityZone: all
        - Id: !ImportValue EpicRO-IC6IPAddress
          AvailabilityZone: all                       
      VpcId: !Ref LoadBalancerVPCId    

#https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-s3-bucket.html
  ALBS3Bucket:
    Type: AWS::S3::Bucket

#https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-s3-policy.html
  ALBS3BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref ALBS3Bucket
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: 
              AWS:
                - arn:aws:iam::033677994240:root
            Action:
              - s3:PutObject
            Resource: 
              - !GetAtt ALBS3Bucket.Arn
              - !Sub '${ALBS3Bucket.Arn}/*'


#https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html
  HSWALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      IpAddressType: ipv4
      LoadBalancerAttributes:
          - Key: deletion_protection.enabled
            Value: true
          - Key: access_logs.s3.enabled
            Value: true
          - Key: access_logs.s3.bucket
            Value: !Ref ALBS3Bucket
          - Key: access_logs.s3.prefix
            Value: "HSWALB_AccessLogs"
      Name: !Sub "${AWS::StackName}-HSWALB"
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSG
      Subnets: 
        - !ImportValue EpicRO-CentralIngressPublic1
        - !ImportValue EpicRO-CentralIngressPublic2
      Type: application
    DependsOn: ALBS3BucketPolicy

  ICFGALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      IpAddressType: ipv4
      LoadBalancerAttributes:      
          - Key: deletion_protection.enabled
            Value: true      
          - Key: access_logs.s3.enabled
            Value: true
          - Key: access_logs.s3.bucket
            Value: !Ref ALBS3Bucket 
          - Key: access_logs.s3.prefix
            Value: "ICFGALB_AccessLogs"                       
      Name: !Sub "${AWS::StackName}-ICFGALB"
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSG      
      Subnets:
        - !ImportValue EpicRO-CentralIngressPublic1
        - !ImportValue EpicRO-CentralIngressPublic2      
      Type: application   
    DependsOn: ALBS3BucketPolicy 

  #https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html
  HSWListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      Certificates: 
        - CertificateArn: !Ref HSWCertificateARN    
      DefaultActions: 
        - Type: forward
          TargetGroupArn: !Ref HSWTargetGroup
      LoadBalancerArn: !Ref HSWALB
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-FS-1-2-Res-2020-10

  HSWHTTPListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: "redirect"
          RedirectConfig:
            Protocol: "HTTPS"
            Port: 443
            StatusCode: "HTTP_301"
      LoadBalancerArn: !Ref HSWALB
      Port: 80
      Protocol: "HTTP"

  ICFGListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      Certificates: 
        - CertificateArn: !Ref ICFGCertificateARN   
      DefaultActions: 
        - Type: forward
          TargetGroupArn: !Ref ICFGTargetGroup      
      LoadBalancerArn: !Ref ICFGALB        
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-FS-1-2-Res-2020-10      

  ICFGHTTPListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: "redirect"
          RedirectConfig:
            Protocol: "HTTPS"
            Port: 443
            StatusCode: "HTTP_301"
      LoadBalancerArn: !Ref ICFGALB
      Port: 80
      Protocol: "HTTP"       

  #https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listenerrule.html
  HSWURLListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties: 
      Actions: 
        - Type: "redirect"
          RedirectConfig:
            Protocol: "HTTPS"
            Port: 443
            Path: "/hsweb_rodr"
            StatusCode: "HTTP_301"
      Conditions: 
        - Field: "path-pattern"
          PathPatternConfig:
            Values: 
              - "/"
      ListenerArn: !Ref HSWListener
      Priority: 1
      
Outputs:
  HSWALB:
    Description: Hyperspace Web Application Load Balancer
    Export: 
      Name: EpicRO-HSWALB
    Value: !Ref HSWALB

  ICFGALB:
    Description: Interconnect Application Load Balancer
    Export: 
      Name: EpicRO-ICFGALB
    Value: !Ref ICFGALB
